--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+		<link rel="shortcut icon" href="./favicon.ico" />
+    <title>RobotMetropolis</title>
   </head>
   <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
